--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cores": "^0.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "react-router-dom": "^5.2.0"
   }
 }
